# Physical-AI-Humanoid-Robotics-Textbook-

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  report.md  tsconfig.json
.gemini/: settings.json
.gemini/commands/: sp.analyze.toml  sp.checklist.toml  sp.clarify.toml  sp.git.commit_pr.toml  sp.implement.toml  sp.phr.toml  sp.plan.toml  sp.specify.toml  sp.tasks.toml
.gemini/tmp/: feature.txt
.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
.next/cache/: .tsbuildinfo
.next/server/: middleware-build-manifest.js
.next/server/pages/: 404.html  500.html  _error.js  index.html  index.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/HrfPUmotPWqF7aexnTcK2/: _buildManifest.js
.next/static/chunks/: webpack.js
.specify/memory/: constitution.md
.specify/scripts/powershell/: create-new-feature.ps1
.specify/templates/: plan-template.md  tasks-template.md
backend/: README.md  docker-compose.yml  main.py  pyproject.toml
backend/core/: config.py
backend/retrieval/: data_models.py  main.py
backend/validation/: test_retrieval.py
book-project/docusaurus-site/: .gitignore  docusaurus.config.ts  package-lock.json  sidebars.ts
book-project/rag-backend/: .gitignore  main.py
book-project/rag-backend/tests/: test_health.py
book-project/robotics-code/: .gitignore
book-project/robotics-code/ros2-examples/urdf_display/: display_humanoid.launch.py  package.xml  setup.py
book-project/robotics-code/ros2-examples/urdf_display/rviz/: simple_humanoid.rviz
book-project/robotics-code/ros2-examples/urdf_display/urdf/: simple_humanoid.urdf
book-project/tools/: ingest_rag_content.py
digital_twin_unity/: README.md
digital_twin_unity/Assets/Scripts/: RobotVisualizer.cs
specs/001-isaac-robot-brain/: data-model.md  plan.md  quickstart.md  tasks.md
specs/001-ros2-humanoid-basics/: data-model.md
specs/002-digital-twin-gazebo-unity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-vision-language-action-vla/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/4-rag-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/5-rag-retrieval-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/digital_twin/: CMakeLists.txt  package.xml
src/digital_twin/launch/: spawn_humanoid.launch.py
src/digital_twin/models/: humanoid.urdf
src/digital_twin/src/: joint_controller.py
src/digital_twin/test/: test_joint_control.py  test_sensor_data.py
src/digital_twin/worlds/: empty.world
(+113 files in other folders)
